# snowAgents

./: .gitignore  AGENTS.md  README.md  build-codeforge-cli.bat  build-release-installer.bat  build-release.bat  index.html  package-lock.json  package.json  settings.example.json  vite.config.ts
docs/: architecture.md  vs-bridge-protocol.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_runner.rs  app_state.rs  cli.rs  code_link.rs  codex_cli_runner.rs  commands.rs  desktop_http_server.rs  lib.rs  main.rs  path_utils.rs  process_manager.rs  project_registry.rs  tool_registry.rs  tool_trace.rs  vs_bridge_service.rs  vs_registry.rs  workspace_tools.rs
src/api/: tauriApi.ts
src/components/: ChatMessage.tsx  ChatTimeline.tsx  CodeLink.tsx  Composer.tsx  Profile.tsx  ProjectCard.tsx  ProjectDetail.tsx  ProjectForm.tsx  ProjectList.tsx  ProviderSettings.tsx  Settings.tsx  Sidebar.tsx  Toast.tsx  TraceDrawer.tsx  TraceEventRow.tsx  TracePanel.tsx  UiPreferences.tsx  VisualStudioSettings.tsx  Workspace.tsx  WorkspaceHeader.tsx  WorkspaceHistoryList.tsx  codeLinkText.tsx  traceViewModel.ts
src/state/: appState.ts
src/types/: project.ts  provider.ts  settings.ts  task.ts  trace.ts  vs.ts
src/utils/: path.ts  projectStatus.ts  providerModels.ts
vsix/SnowAgent.VSBridge/: BridgeHttpServer.cs  DesktopRegistrar.cs  JsonUtil.cs  Models.cs  README.md  SnowAgent.VSBridge.csproj  SnowAgent.VSBridge.sln  SnowAgentVsBridgePackage.cs  source.extension.cs  (+1 more)
