[package]
name = "codeforge-desktop"
version = "0.1.0"
description = "CodeForge Desktop MVP"
authors = ["CodeForge"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tiny_http = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
